--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.37
+@version     1.1.38
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -397,10 +397,10 @@ font-size: 90% !important;
 
 
 /* Shorten the inline links for "edit source" to just "source" */
-.mw-editsection > a:not(.mw-editsection-visualeditor)  {
+.mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection)  {
   font-size: 0px;
 }
-.mw-editsection > a:not(.mw-editsection-visualeditor)::after  {
+.mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection)::after  {
   content: 'source';
   font-size: 0.9rem;
   visibility: visible;
