--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.46
+@version     1.0.47
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -908,12 +908,10 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 }
 
 /* Fix for sticky table-header gadgets */
-/* Breaking on mw.o ? */
+/* Breaking on mw.o ? Or only when it's a globally-imported script?? */
 .jquery-tablesorter > thead,
 .mw-sticky-header > thead, 
 .client-js.vector-sticky-header-enabled .mw-sticky-header-element {
-    position: -webkit-sticky;
-    position: sticky;
     top: 78px !important;
 }
 
