--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.38
+@version     1.1.39
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -275,7 +275,7 @@ border: green 10px solid;
   display:none;
 }
 
-/* tweak gender indicators */
+/* Smaller & lighter gender indicators */
 #ps-gender-male, 
 #ps-gender-female, 
 #ps-gender-unknown {
@@ -294,12 +294,12 @@ ul:not(.noprint) + ul {
   border-top: none;
 }
 
-/* Semi-hide the empty summary for Category Trees */
+/* Semi-hide the empty Category Trees */
 .CategoryTreeItem:has(span[title="Contains 0 subcategories, 0 pages, and 0 files"]) {
-  opacity: 0.4;
+  opacity: 0.55;
 }
 
-/* lighter numbers for Vector-classic text */
+/* lighter color for Vector-classic ToC numbers */
 .tocnumber {
 color: grey;
 }
@@ -394,8 +394,6 @@ margin-top: -15px
 font-size: 90% !important;
 } */
 
-
-
 /* Shorten the inline links for "edit source" to just "source" */
 .mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection)  {
   font-size: 0px;
@@ -416,5 +414,28 @@ padding-right: 10px;
 #xtools {
 opacity: 0.5;
 }
+
+/* hide toc hide button */
+button[data-event-name="pinnable-header.vector-toc.unpin"] {
+  color: var(--background-color-base) !important;
+}
+
+/* darkmode fixes */
+.wikiEditor-ui-toolbar,
+#pagehistory li.selected {color: unset; background: unset;}
+.editOptions {background: unset; color:unset;}
+#editpage-specialchars a {background:unset;}
+.wikiEditor-ui-toolbar .tabs span.tab a.current {color: unset}
+.wikiEditor-ui-toolbar .page-table td {color:unset}
+.wikiEditor-ui-toolbar .page-characters div span {color:unset;}
+.wikiEditor-ui-toolbar .booklet > .index > .current {background: unset}
+.wikiEditor-ui-toolbar .group .tool-select .label {color: unset}
+.wikiEditor-ui-toolbar .tabs span.tab a {color:unset}
+.mw-parser-output tr + tr > .navbox-list {border-top: unset;}
+.mw-parser-output .navbox-list-with-group {border-left: unset;}
+
+
+
+
 
 }
